[gd_scene load_steps=5 format=3 uid="uid://c8o5ew5sdyxh6"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_jm4qe"]

[sub_resource type="LabelSettings" id="LabelSettings_2e4mj"]
font_size = 75

[sub_resource type="LabelSettings" id="LabelSettings_p655p"]
font_size = 75

[sub_resource type="LabelSettings" id="LabelSettings_j52m1"]
font_size = 75

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_jm4qe")

[node name="PauseControl" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="CenterContainer" type="CenterContainer" parent="PauseControl"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_right = 250.0
offset_bottom = 1000.0
grow_horizontal = 2

[node name="BoxContainer" type="BoxContainer" parent="PauseControl/CenterContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PauseControl/CenterContainer/BoxContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2

[node name="ColorRect3" type="ColorRect" parent="PauseControl/CenterContainer/BoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="ResumeButton" type="Button" parent="PauseControl/CenterContainer/BoxContainer/VBoxContainer/ColorRect3"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="ResumeLabel" type="Label" parent="PauseControl/CenterContainer/BoxContainer/VBoxContainer/ColorRect3"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Resume"
label_settings = SubResource("LabelSettings_2e4mj")
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 162

[node name="ColorRect" type="ColorRect" parent="PauseControl/CenterContainer/BoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="SettingsButton" type="Button" parent="PauseControl/CenterContainer/BoxContainer/VBoxContainer/ColorRect"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="SettingsLabel" type="Label" parent="PauseControl/CenterContainer/BoxContainer/VBoxContainer/ColorRect"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Settings"
label_settings = SubResource("LabelSettings_2e4mj")
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 162

[node name="ColorRect2" type="ColorRect" parent="PauseControl/CenterContainer/BoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="QuitButton" type="Button" parent="PauseControl/CenterContainer/BoxContainer/VBoxContainer/ColorRect2"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="QuitLabel" type="Label" parent="PauseControl/CenterContainer/BoxContainer/VBoxContainer/ColorRect2"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Quit Game"
label_settings = SubResource("LabelSettings_p655p")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingsControl" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="CenterContainer" type="CenterContainer" parent="SettingsControl"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -500.0
offset_right = 500.0
offset_bottom = 1000.0
grow_horizontal = 2

[node name="BoxContainer" type="BoxContainer" parent="SettingsControl/CenterContainer"]
custom_minimum_size = Vector2(1000, 100)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsControl/CenterContainer/BoxContainer"]
custom_minimum_size = Vector2(1000, 100)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="SettingsControl/CenterContainer/BoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="SensitivityLabel" type="Label" parent="SettingsControl/CenterContainer/BoxContainer/VBoxContainer/ColorRect"]
custom_minimum_size = Vector2(1000, 100)
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Mouse Sensitivity"
label_settings = SubResource("LabelSettings_2e4mj")
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 162

[node name="ColorRect2" type="ColorRect" parent="SettingsControl/CenterContainer/BoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="HSlider" type="HSlider" parent="SettingsControl/CenterContainer/BoxContainer/VBoxContainer/ColorRect2"]
custom_minimum_size = Vector2(1000, 100)
layout_mode = 0
offset_right = 8.0
offset_bottom = 16.0
min_value = 1.0
max_value = 50.0
value = 1.0
tick_count = 50

[node name="ColorRect3" type="ColorRect" parent="SettingsControl/CenterContainer/BoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="BackButton" type="Button" parent="SettingsControl/CenterContainer/BoxContainer/VBoxContainer/ColorRect3"]
custom_minimum_size = Vector2(1000, 100)
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="BackLabel" type="Label" parent="SettingsControl/CenterContainer/BoxContainer/VBoxContainer/ColorRect3"]
custom_minimum_size = Vector2(1000, 100)
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Back"
label_settings = SubResource("LabelSettings_j52m1")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="PauseControl/CenterContainer/BoxContainer/VBoxContainer/ColorRect3/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseControl/CenterContainer/BoxContainer/VBoxContainer/ColorRect/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="PauseControl/CenterContainer/BoxContainer/VBoxContainer/ColorRect2/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="drag_ended" from="SettingsControl/CenterContainer/BoxContainer/VBoxContainer/ColorRect2/HSlider" to="." method="_on_h_slider_drag_ended"]
[connection signal="pressed" from="SettingsControl/CenterContainer/BoxContainer/VBoxContainer/ColorRect3/BackButton" to="." method="_on_back_button_pressed"]
